# nix-conf

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.adoc  LICENSE.adoc  README.adoc  README.md  README.rst  TODO.md  TODO.org  config.toml  configure-darwin.nix  configure-hardware.sh  configure-home.nix  configure-nixos.nix  configure-systems.nix  darwin-setup.sh  darwin-setup.zsh  devsh.nix  flake.nix  outputs.nix  unfreePacakges.txt  unfree_predicates.nix
auto/: .gitignore  Cargo.toml  Makefile  README.adoc  README.md  README.rst  bootstrap.py  bootstrap.swift  darwin-setup.cpp
auto/.old/: darwin-setup.cpp
auto/src/: nix-darwin.rs  test.rs
auto/src/mods/: mod.rs  nix.rs  os.rs
config/: configuration.nix  displayManager.nix  hardware-configuration.nix  stylix.nix
configurations/: mainpc.nix
docs/: README.md  applying_the_config.md  cloning_repo.md  creating_a_config.md
home/: config.nu  fastfetch.nix  file.nix  home.nix  spicetify.nix  wezterm.lua
home-manager/: config.nu  home.nix  spicetify.nix  starship.toml  wezterm.lua
hosts/: macbook.nix  mainpc-x86.nix  vm-aarch64.nix
modules/: boot.nix  configurations.nix  display-manager.nix  dock-module.nix  dock.nix  facter.nix  files.nix  fonts.nix  foot.nix  formatter.nix  helix.nix  home-manager.nix  i18n.nix  mangowc-module.nix  mangowc.nix  meta.nix  nix.nix  nixcord.nix  nixpkgs.nix  owner.nix  packages.nix  repo.nix  scm.nix  security.nix  services.nix  shells.nix  stylix.nix  time.nix  tofi.nix  virtualisation.nix  wallpaper.nix  waybar.nix  xdg.nix
scripts/: .gitignore  README.md  (+2 more)
(+384 files in other folders)
