[package]
name = "invra-nix-automation"
version = "0.0.1"
edition = "2024"
authors = [ "Invra" ]

[[bin]]
name = "bootstrap-darwin"
path = "src/nix-darwin.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[target.'cfg(target_os="macos")'.dependencies]
clap = "4.5.41"
colored = "3.0.0"
os_info = "3.12.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
